--- a/templates/report.html
+++ b/templates/report.html
@@ -46,7 +46,7 @@
             text-align: center;
         }
 
-        #chart, #event-chart {
+        .line-graph {
             padding-left: 20px;
             padding-right: 20px;
         }
@@ -90,8 +90,9 @@
             <h4>Total Hours Awarded</h4>
         </div>
     </div>
-    <div id="chart"></div>
-    <div id="detail" class="scroll-pane"></div>
+    <div id="award-chart-funding" class="line-graph"></div>
+    <div id="award-chart-hours" class="line-graph"></div>
+    <div id="award-detail" class="scroll-pane"></div>
 
     <div class="department-data">
         <div id="departments" class="department-item"></div>
@@ -112,7 +113,7 @@
         </div>
         <div></div>
     </div>
-    <div id="event-chart"></div>
+    <div id="event-chart" class="line-graph"></div>
     <div id="event-detail" class="scroll-pane"></div>
 
     <div class="department-data">
@@ -167,7 +168,8 @@
     let total_events = 0
     let total_attendees = 0
 
-    let awards_main_chart = null
+    let awards_funding_chart = null
+    let awards_hours_chart = null
     let awards_detail_grid = null
     let awards_dept_chart = null
     let awards_dept_detail_grid = null
@@ -301,7 +303,7 @@
 
     function render_data() {
         build_totals()
-        build_awards_main_chart()
+        build_awards_overview_charts()
         build_awards_dept_chart()
         build_events_main_chart()
         build_events_dept_chart()
@@ -350,12 +352,16 @@
         doTickerAnimation(totalAttendeesSpan)
     }
 
-    function build_awards_main_chart() {
-        if (awards_main_chart) awards_main_chart.destroy()
+    function build_awards_overview_charts() {
+        if (awards_funding_chart) awards_funding_chart.destroy()
+        if (awards_hours_chart) awards_hours_chart.destroy()
 
         let proj_datapoints = []
         let funding_datapoints = []
         let hours_datapoints = []
+
+        let chartHeight = Math.floor(window.innerHeight * 0.8)
+        if (chartHeight > 500) chartHeight = 500
 
         let awardPeriodStarted = false
         let awardPeriodEnded = false
@@ -373,7 +379,7 @@
             if (period === periodEndBox.value) awardPeriodEnded = true
         })
 
-        awards_main_chart = new ApexCharts(document.querySelector("#chart"), {
+        awards_funding_chart = new ApexCharts(document.querySelector("#award-chart-funding"), {
             series: [{
                 name: 'Awards',
                 type: 'column',
@@ -382,14 +388,10 @@
                 name: 'Funding',
                 type: 'line',
                 data: funding_datapoints
-            }, {
-                name: 'Hours',
-                type: 'line',
-                data: hours_datapoints
             }],
             colors: chart_colors,
             chart: {
-                height: Math.floor(window.innerHeight * 0.8),
+                height: chartHeight,
                 fontFamily: 'Oswald, sans-serif',
                 type: 'line',
                 stacked: false,
@@ -398,6 +400,9 @@
                         let period_clicked = relevantPeriods[opts.dataPointIndex]
                         show_award_details(period_clicked)
                     }
+                },
+                zoom: {
+                    enabled: false
                 }
             },
             dataLabels: {
@@ -407,7 +412,7 @@
                 width: [1, 4, 4]
             },
             title: {
-                text: `Awards Overview`,
+                text: `Award Funding`,
                 align: 'left',
                 offsetX: 110
             },
@@ -465,6 +470,91 @@
                         }
                     },
                 },
+            ],
+            tooltip: {
+                fixed: {
+                    enabled: true,
+                    position: 'topLeft', // topRight, topLeft, bottomRight, bottomLeft
+                    offsetY: 30,
+                    offsetX: 60
+                },
+            },
+            legend: {
+                horizontalAlign: 'left',
+                offsetX: 40
+            },
+        })
+        awards_funding_chart.render()
+
+        awards_hours_chart = new ApexCharts(document.querySelector("#award-chart-hours"), {
+            series: [{
+                name: 'Awards',
+                type: 'column',
+                data: proj_datapoints
+            }, {
+                name: 'Hours',
+                type: 'line',
+                data: hours_datapoints
+            }],
+            colors: [chart_colors[0], chart_colors[2]],
+            chart: {
+                height: chartHeight,
+                fontFamily: 'Oswald, sans-serif',
+                type: 'line',
+                stacked: false,
+                events: {
+                    click: function (event, chartContext, opts) {
+                        let period_clicked = relevantPeriods[opts.dataPointIndex]
+                        show_award_details(period_clicked)
+                    }
+                },
+                zoom: {
+                    enabled: false
+                }
+            },
+            dataLabels: {
+                enabled: false
+            },
+            stroke: {
+                width: [1, 4]
+            },
+            title: {
+                text: `Award Hours`,
+                align: 'left',
+                offsetX: 110
+            },
+            xaxis: {
+                categories: relevantPeriods,
+                labels: {
+                    rotate: -45,
+                    rotateAlways: true,
+                }
+            },
+            yaxis: [
+                {
+                    seriesName: 'Awards',
+                    axisTicks: {
+                        show: true,
+                    },
+                    axisBorder: {
+                        show: true,
+                        color: chart_colors[0],
+                    },
+                    labels: {
+                        style: {
+                            colors: chart_colors[0],
+                        }
+                    },
+                    title: {
+                        text: "Awards Given",
+                        style: {
+                            color: chart_colors[0],
+                        }
+                    },
+                    tooltip: {
+                        enabled: true
+                    }
+                },
                 {
                     seriesName: 'Hours',
                     opposite: true,
@@ -501,7 +591,7 @@
                 offsetX: 40
             },
         })
-        awards_main_chart.render()
+        awards_hours_chart.render()
     }
 
     function show_award_details(period) {
@@ -512,7 +602,18 @@
                 {name: 'Project', formatter: (cell) => gridjs.html(cell)},
                 {name: 'Semester', sort: true},
                 {name:'Award', sort: true},
-                {name: 'Funding', sort: true},
+                {
+                    name: 'Funding',
+                    sort: {
+                        compare: (a, b) => {
+                            let a_cleaned = parseFloat(a.replace('$', '').replaceAll(',', ''))
+                            let b_cleaned = parseFloat(b.replace('$', '').replaceAll(',', ''))
+                            if (a_cleaned > b_cleaned) return 1
+                            else if (b_cleaned > a_cleaned) return -1
+                            else return 0
+                        }
+                    },
+                },
                 {name:'Hours', sort: true}
             ]
             let data = []
@@ -541,11 +642,13 @@
                 }
             })
 
+            let awards_detail_div = document.getElementById('award-detail')
             awards_detail_grid = new gridjs.Grid({
                 columns: cols,
                 data: data
             })
-            awards_detail_grid.render(document.getElementById('detail'))
+            awards_detail_grid.render(awards_detail_div)
+            awards_detail_div.scrollIntoView({behavior: 'smooth'})
         }
     }
 
@@ -580,7 +683,18 @@
 
         let cols = [
             {name: 'Principal Investigator', formatter: (cell) => gridjs.html(cell)},
-            {name: 'Total Funding', sort: true},
+            {
+                name: 'Total Funding',
+                sort: {
+                    compare: (a, b) => {
+                        let a_cleaned = parseFloat(a.replace('$', '').replaceAll(',', ''))
+                        let b_cleaned = parseFloat(b.replace('$', '').replaceAll(',', ''))
+                        if (a_cleaned > b_cleaned) return 1
+                        else if (b_cleaned > a_cleaned) return -1
+                        else return 0
+                    }
+                },
+            },
             {name:'Total Hours', sort: true}
         ]
         let data = []
@@ -596,11 +710,13 @@
             data.push(row)
         })
 
+        let awards_dept_detail_div = document.getElementById('department-detail')
         awards_dept_detail_grid = new gridjs.Grid({
             columns: cols,
             data: data
         })
-        awards_dept_detail_grid.render(document.getElementById('department-detail'))
+        awards_dept_detail_grid.render(awards_dept_detail_div)
+        awards_dept_detail_div.style.maxHeight = document.getElementById('departments').style.minHeight
     }
 
     function build_events_main_chart() {
@@ -608,6 +724,9 @@
 
         let event_datapoints = []
         let attendee_datapoints = []
+
+        let chartHeight = Math.floor(window.innerHeight * 0.8)
+        if (chartHeight > 500) chartHeight = 500
 
         let awardPeriodStarted = false
         let awardPeriodEnded = false
@@ -636,7 +755,7 @@
             }],
             colors: chart_colors,
             chart: {
-                height: Math.floor(window.innerHeight * 0.8),
+                height: chartHeight,
                 fontFamily: 'Oswald, sans-serif',
                 type: 'line',
                 stacked: false,
@@ -645,6 +764,9 @@
                         let period_clicked = relevantPeriods[opts.dataPointIndex]
                         show_event_details(period_clicked)
                     }
+                },
+                zoom: {
+                    enabled: false
                 }
             },
             dataLabels: {
