ensuring color of links is maroon

--- a/templates/report.html
+++ b/templates/report.html
@@ -21,6 +21,10 @@
             font-family: "Oswald", sans-serif;
         }
 
+        a {
+            color: #500000;
+        }
+
         #codhr-logo {
             max-height: 75px;
         }
